<resources>
    <string name="app_name">MVP</string>
    <string name="button">Button</string>
    <string name="create_your_resume">Create Your Resume</string>
    <string name="contact_info">Contact Info</string>
    <string name="name">Name</string>
    <string name="objective_statement">Objective Statement</string>
    <string name="enter_your_objective_statement">Enter your objective statement</string>
    <string name="education">Education</string>
    <string name="enter_your_educational_information">Enter your educational information</string>
    <string name="enter_your_work_experience">Enter your work experience</string>
    <string name="work_experience">Work Experience</string>
    <string name="save">Save</string>
    <string name="networking">Networking</string>
    <string name="boost_your_resume">Boost Your Resume</string>
    <string name="resume_tips">Resume Tips</string>
    <string name="networking_options">Networking Options</string>
    <string name="textView">TextView</string>
    <string name="network_blurb">Utilize this section to explore groups that improve education and communication among similar professions.</string>
    <string name="back">Back</string>
    <string name="netwrk_chosen_options">network chosen options</string>
    <string name="resume_boost_explanation">Use the drop down menu to find relevant opportunities to supplement your resume.</string>
    <string name="textview">TextView</string>
    <string name="resumeditor">ResumEditor</string>
    <string name="yellowrect">yellowRect</string>
    <string name="layout"><u>Layout</u></string>
    <string name="layout_info">Keep it minimalistic. Don\'t make your future employer strain their eyes or work to figure out your intent.
                                \n\nBe concise! Long paragraphs of beautiful prose won\'t look attractive on paper. Try to stick to one page of text, but don\'t trim the meat of your resume to remove 1/4 page of text.
                                \n\nUse a professional font and clean spacing.</string>
    <string name="obj_statement_underline"><u>Objective Statement</u></string>
    <string name="obj_statement_info">Include one mostly if you are changing careers or are an entry level worker. Those trying to climb the
                                        ladder internally are less likely to need one.
                                        \n\nFocus on what you can give to a role, not what the company can do for you. Avoid \"seeking\" something for a \"personal goal\".
                                        \n\nIf applying to many jobs, try to customize each version of your resume with a different objective to add specificity.
                                        \n\nDon\'t give generalizations! Be very specific beyond wanting \"growth\" or \"a challenge\".
                                        \n\nThe more concise, the better. Many applicants want to shy away from saying exactly what they want so as to seem more
                                        adaptable, but only wind up seeming noncommittal. Own your goals!</string>
    <string name="grammar"><u>Grammar</u></string>
    <string name="grammar_info">Stay away from action verbs! Use the past tense to give a sense of permanence. It\'s all about what skills and experience you\'ll
                                bring to your new job!
                                \n\nDouble check everything! Have several people you know read through it.
                                \n\nAlways check you reference, or your own, contact information! Be sure to call all the numbers on your resume to be sure they\'re up to date.</string>
    <string name="content"><u>Content</u></string>
    <string name="content_info">Be as specific as possible! Saying \"worked in a restaurant\" sounds a lot less helpful than \"Recruited, trained, hired, and supervised
                                workers in a restaurant setting\".
                                \n\nMake the employer feel the resume they receive is meant specifically for them. Do some research into what the company supports and try to
                                tailor some points specifically to these things. For example, if your employer is big on environmental protection, place you protest attendance
                                for animal preservation higher up!
                                \n\nDon\'t leave off the little jobs you\'ve taken up. The soft skills you\'ve gained from these places are important to employers.</string>
    <string name="test">This is a test</string>
    <string name="save_your_resume">Save Your Resume</string>
    <string name="back_to_home_screen">Back to Home Screen</string>
    <string name="done">Done</string>
    <string name="saved">Saved!</string>
    <string name="logo">logo</string>
    <string name="next">Next</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="enter_address">Enter your address:</string>
    <string name="enter_your_email">Enter your email:</string>
    <string name="enter_your_phone_number">Enter your phone number:</string>
    <string name="university">Enter which university you attended:</string>
    <string name="graduation_year">Graduation year:</string>
    <string name="university_location">Location of school (city, state):</string>
    <string name="degree_earned">Degree earned:</string>
    <string name="name_of_company">Name of company:</string>
    <string name="position_held">Position held:</string>
    <string name="description_of_responsibilities">Description of responsibilities:</string>
    <string name="years_of_employment">Years of employment:</string>
    <string name="previous">Previous</string>
    <string name="Anita_link"><a href="https://anitaborg.org/">Link to site</a></string>
    <string name="enter_obj">Enter your objective statement:</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="resume1">Resume 1</string>
    <string name="purchase_the_premium_package">Purchase the Premium Package</string>
    <string name="resume_2">Resume 2</string>
    <string name="resume_3">Resume 3</string>
    <string name="choose_template">Pick a Template</string>
    <string name="minimalist">Minimalist</string>
    <string name="overachiever">Overachiever</string>
    <string name="manage_your_resumes">Manage Your Resumes</string>
    <string name="prem_pkg_info">Purchase the Premium Package for $2.99! The package comes with two additional resumes to edit, and a new template to choose from!</string>
    <string-array name="networking_choices">
        <item>Select an Industry</item>
        <item>Computer Science</item>
        <item>Engineering</item>
        <item>General STEM</item>
    </string-array>
    <string-array name="template_choices">
        <item>Minimalist</item>
        <item>Overachiever</item>
    </string-array>

</resources>
