<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resume_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"

    tools:context="com.example.noelle.mvp.ResumeScreen">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:gravity="center_horizontal"
        android:ems="14"
        android:textSize="18sp"
        android:background="@null"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:layout_marginTop="12dp"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/contact_info"
        android:gravity="center_horizontal"
        android:background="@null"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:ems="8"
        android:textSize="14sp"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone"/>

    <TextView
        android:text="@string/objective_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:textSize="16sp"
        android:maxLength="19"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/enter_your_objective_statement"
        android:background="@null"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:ems="8"
        android:textSize="14sp"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="16sp"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:layout_below="@+id/editText4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/enter_your_educational_information"
        android:ems="8"
        android:textSize="14sp"
        android:background="@null"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:id="@+id/editText5"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/work_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="16sp"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:layout_below="@+id/editText5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/enter_your_work_experience"
        android:ems="8"
        android:textSize="14sp"
        android:background="@null"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:id="@+id/editText6"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/button2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:id="@+id/relLay"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView24"
            android:background="@drawable/section_border_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/button12"
            android:background="@drawable/rounded_corner_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_your_resume"
            android:layout_marginTop="186dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/button13"
            android:layout_alignStart="@+id/button13"
            android:layout_alignRight="@+id/button13"
            android:layout_alignEnd="@+id/button13" />

        <Button
            android:id="@+id/button13"
            android:background="@drawable/rounded_corner_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home_screen"
            android:layout_marginTop="38dp"
            android:layout_below="@+id/button12"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button12"
            android:layout_toEndOf="@+id/button12"
            android:layout_toRightOf="@+id/button12"
            android:text="@string/saved"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:visibility="invisible"/>


    </RelativeLayout>




</RelativeLayout>
