<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.womengineers.resume.MainScreen"
    >

    <Button
        android:text="@string/create_your_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:background="@drawable/rounded_corner_p"
        android:layout_marginTop="56dp"
        tools:ignore="RelativeOverlap"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button4"
        android:background="@drawable/rounded_corner_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/networking"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="31dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:background="@drawable/rounded_corner_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/boost_your_resume"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:background="@drawable/rounded_corner_y"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="28dp"
        android:text="@string/resume_tips"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resumeditor"
        android:gravity="center_horizontal"
        android:textSize="50sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100sp"
        android:layout_height="100sp"
        app:srcCompat="@mipmap/logo"
        android:contentDescription="@string/logo"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
