<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView5">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="org.womengineers.resume.EducationScreen"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView26"
            android:background="@drawable/section_border_p"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            tools:layout_editor_absoluteX="-14dp"
            tools:layout_editor_absoluteY="-1dp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/education"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button15"
            android:background="@mipmap/backstraight"
            android:layout_width="60sp"
            android:layout_height="50sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/button16"
            android:background="@mipmap/forth"
            android:layout_width="60sp"
            android:layout_height="50sp"
            android:layout_marginRight="13dp"
            tools:ignore="RelativeOverlap"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView35"
            android:layout_marginStart="11dp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button15"
            android:layout_alignStart="@+id/button15"
            android:layout_below="@+id/button15"
            android:layout_marginTop="30dp"
            android:text="@string/university"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editText10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_below="@+id/textView35"
            android:layout_alignLeft="@+id/textView35"
            android:layout_alignStart="@+id/textView35"
            android:layout_alignRight="@+id/button16"
            android:layout_alignEnd="@+id/button16" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText10"
            android:layout_alignStart="@+id/editText10"
            android:layout_below="@+id/editText10"
            android:layout_marginTop="30dp"
            android:text="@string/graduation_year"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editText11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView36"
            android:layout_alignStart="@+id/textView36"
            android:layout_below="@+id/textView36"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_alignRight="@+id/editText10"
            android:layout_alignEnd="@+id/editText10" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText11"
            android:layout_alignStart="@+id/editText11"
            android:layout_below="@+id/editText11"
            android:layout_marginTop="30dp"
            android:text="@string/university_location"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editText12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView37"
            android:layout_alignStart="@+id/textView37"
            android:layout_below="@+id/textView37"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_alignRight="@+id/editText11"
            android:layout_alignEnd="@+id/editText11" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText12"
            android:layout_alignStart="@+id/editText12"
            android:layout_below="@+id/editText12"
            android:layout_marginTop="30dp"
            android:text="@string/degree_earned"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editText13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView38"
            android:layout_alignStart="@+id/textView38"
            android:layout_below="@+id/textView38"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_alignRight="@+id/editText12"
            android:layout_alignEnd="@+id/editText12" />
    </RelativeLayout>

    </ScrollView>
